--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.0",
     "react-intersection-observer": "^9.10.3",
+    "react-query-devtools": "^2.6.3",
     "react-router-dom": "^6.24.0",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
